# libgmonopd

./: Makefile.am  Makefile.in  NEWS  PROTOCOL  README  TODO  acconfig.h  config.h.in  configure  configure.in  conftest  libgmonopd-config.in  libgmonopd.m4  libgmonopd.spec
conf/: monopd.conf
conf/city/: cc_cards.conf  chance_cards.conf  estates.conf  theme.conf
debian/: changelog  control  copyright  dirs  files  libgmonopd.postinst.debhelper  libgmonopd.prerm.debhelper  libgmonopd.substvars  rules  substvars
gmonopd/: main.c
libgmonopd/: Makefile.am  Makefile.in  auction.c  auction.h  card.c  card.h  config.h  const.h  debt.c  debt.h  estate.c  estate.h  event.c  event.h  game.c  game.h  gmonopd.c  input.c  input.h  libgmonopd.c  libgmonopd.h  network.c  network.h  player.c  player.h  stub.h  trade.c  trade.h
